<resources>
    <string name="app_name">Eletriccaapp</string>
    <string name="title">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kw">Preço Kw/h</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular autonomia</string>
    <string name="carro_azul">Carro azul</string>
    <string name="r_300_000_00">R$ 300.000,00</string>
    <string name="_280_cv">280 cv</string>
    <string name="_23_min">23 min</string>
    <string name="_300_kw_h">300 Kw/h</string>
    <string name="redirecionar">Calcular autonomia</string>
</resources>