<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="370dp"
    android:layout_marginBottom="16dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="18dp"
        app:cardElevation="20dp"
        android:layout_margin="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_margin="25dp"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_favorito"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_star_border"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                android:id="@+id/iv_imagem1"
                android:layout_width="match_parent"
                android:contentDescription="@string/carro_azul"
                android:layout_height="200dp"
                android:src="@drawable/carro_ele"
                app:layout_constraintTop_toTopOf="@id/cl_card_content"
                />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_imagem1"
                app:layout_constraintStart_toStartOf="@+id/iv_imagem1"/>



            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_300_000_00"
                android:layout_marginStart="50dp"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_imagem1"
                />


            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bateria"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toStartOf="@+id/iv_imagem1"
                />



            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300_kw_h"
                android:layout_marginStart="50dp"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
                />


            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="@+id/iv_imagem1"
                />



            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_280_cv"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria_value"
                app:layout_constraintStart_toStartOf="@+id/tv_bateria_value"/>


            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="@+id/iv_imagem1"
                />


            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_min"
                android:layout_marginStart="50dp"
                app:layout_constraintLeft_toRightOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia_value"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>