<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_title"
        android:textSize="26sp"
        android:layout_margin="18dp"
        android:text="@string/calcular_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_close"/>

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kw"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>


    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="@+id/et_preco_kwh"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>